fix: spacing

--- a/src/sass/pages/contact/_form.scss
+++ b/src/sass/pages/contact/_form.scss
@@ -17,7 +17,8 @@
     form {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 24px;
+      column-gap: 24px;
+      row-gap: 32px;
       align-items: start;
 
       @media (min-width: $tablet-screen) {
